# Agentic-IIoMT-Security

./: .gitignore  README.md  conftest.py  generate_readme.py  kaggle_bot_iot_training.py  kaggle_training.ipynb  pyproject.toml  requirements.txt
checkpoints/: __huggingface_repos__.json  cnn_bigru_fp32.onnx.data  iiomt_reasoning_dataset.jsonl  label_mapping.json  training_results.json
config/: safety_policies.yaml  settings.yaml
docs/: CROSS_DOMAIN_GUIDE.md  FINAL_VERIFICATION_REPORT.md  METHODOLOGY.md  PAPER_COMPLETION_AUDIT.md  PROJECT_STATUS.md  TABLE1_MATHEMATICAL_AUDIT.md  VERIFICATION_GUIDE.md
scripts/: binary_classifier.py  build_kaggle.py  build_kaggle_bot_iot.py  emergency_brake_kde.py  export_onnx.py  gateway_agent_mqtt.py  generate_slm_dataset.py  kaggle_train.py  kaggle_train_edge.py  kaggle_train_qat.py  kaggle_training.py  main.py  mock_datasets.py  run_inference_test.py  send_test.py  slm_gateway_agent.py  tcpreplay_emulator.py  train_bot_iot.py  train_ciciot2023.py  train_edge_iiotset.py  train_unsw_nb15.py
src/dashboard/: __init__.py  app.py
src/data/: __init__.py  bot_iot_loader.py  ciciot2023_loader.py  download_ciciomt2024.py  (+9 more)
src/system1/: CMakeLists.txt  __init__.py  edge_agent.cpp  edge_agent.py  main.py  xdp_filter.c
src/system1/detection/: __init__.py  emergency_brake.py  kde_threshold.py
src/system1/models/: __init__.py  cnn_bigru.py  isolation_forest_lite.py
src/system1/quantization/: __init__.py  pruner.py  quantizer.py
src/system1/training/: __init__.py  trainer.py
tests/: mqtt_latency_test.py  throughput_profiler.py
(+34 files in other folders)
