[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-domain-agentic-iiomt"
version = "0.1.0"
description = "Cross-Domain Agentic Security for Industrial Medical IoT (dual-process neuro-symbolic framework)"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

# Source code lives only under src/ (src-layout). Run `pip install -e .`
# once to make the packages (system1, system2, data, evaluation,
# dashboard, infrastructure) importable from anywhere.
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
